# flake8-ruff-wrapper

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: upload-to-pypi.yml
flake8_ruff/: cli.py  rules.py
