[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flake8-ruff-wrapper"
version = "0.4.0"
description = "Invoke ruff using flake8 options"
license = { text = "ISC" }
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: ISC License (ISCL)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
urls = { Homepage = "https://github.com/fsouza/flake8-ruff-wrapper" }
requires-python = ">=3.8"
dependencies = ["flake8>=6.1.0", "ruff>=0.0.292", "toml>=0.10.2"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
flake8-ruff = "flake8_ruff.cli:main"
